--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Nighthawk-Pages
 description: "August 2023 to June 2024"
-owner_name: Tirth Thakkar
-github_username: Tirth-Thakkar
+owner_name: Anusha Khobare
+github_username: flying_book
 github_repo: "Nighthawk-Pages"
-baseurl: "/Nighthawk-Pages"
+baseurl: "/flyingbook_home"
 remote_theme: jekyll/minima
 minima:
   social_links:
